--- a/l/linux/4.1-lts/package.xml
+++ b/l/linux/4.1-lts/package.xml
@@ -1,27 +1,24 @@
 <?xml version="1.0" encoding="utf-8"?>
 <control xmlns:xi="http://www.w3.org/2001/XInclude">
 
-    <source name="linux-4.1-lts" architecture-independent="false">
+    <source name="linux-4.1" architecture-independent="false">
         <description>
-            <summary></summary>
+            <summary>Linux kernel version 4.1 LTS</summary>
             <p>
+            The Linux kernel is a modern, monolithic computer operating
+            system kernel running on PCs, servers, embedded systems and
+            mobile devices.
             </p>
         </description>
 
         <sources>
-            <file src="linux.tar.xz" subdir="sources"
-                sha256sum=""/>
+            <file src="linux-4.1.36.tar.xz" subdir="sources"
+                sha256sum="e1526ddf1222a89399f0d0b0921c46fe727812571dd3a7f42be9f03472f11590"/>
         </sources>
-
-        <requires>
-        </requires>
 
         <!-- build rules -->
         <xi:include href="rules.xml"/>
     </source>
-
-    <!-- package rules -->
-    <xi:include href="linux.xml"/>
 
     <!-- changelog -->
     <xi:include href="changelog.xml"/>
