--- a/m/mpfr4/package.xml
+++ b/m/mpfr4/package.xml
@@ -2,7 +2,7 @@
 <control xmlns:xi="http://www.w3.org/2001/XInclude">
 
     <defines>
-        <def name="XPACK_BUILD_DIR" value="build"/>
+        <def name="BOLT_BUILD_DIR" value="build"/>
     </defines>
 
     <source name="mpfr4" architecture-independent="false">
@@ -18,21 +18,9 @@
         </description>
 
         <sources>
-            <file src="mpfr.tar.xz" subdir="sources"
-                sha256sum="6835a08bd992c8257641791e9a6a2b35b02336c8de26d0a8577953747e514a16"/>
-            <file src="patches.01.tar.gz" subdir="patches"
-                sha256sum="f961d2e9044c8a17a2b0e4206287e9f55b66307ef0a64eea8296426807b6679e"/>
+            <file src="mpfr-3.1.5.tar.xz" subdir="sources"
+                sha256sum="015fde82b3979fbe5f83501986d328331ba8ddf008c1ff3da3c238f49ca062bc"/>
         </sources>
-
-        <patches>
-            <patchset subdir="sources">
-                <file src="patches/patch01"/>
-                <file src="patches/patch02"/>
-                <file src="patches/patch03"/>
-                <file src="patches/patch04"/>
-                <file src="patches/patch05"/>
-            </patchset>
-        </patches>
 
         <requires>
             <package name="libgmp-dev"/>
@@ -42,10 +30,6 @@
         <!-- build rules -->
         <xi:include href="rules.xml"/>
     </source>
-
-    <!-- package rules -->
-    <xi:include href="libmpfr4.xml"/>
-    <xi:include href="libmpfr-dev.xml"/>
 
     <!-- changelog -->
     <xi:include href="changelog.xml"/>
