--- a/m/musl/package.xml
+++ b/m/musl/package.xml
@@ -29,7 +29,15 @@
         <sources>
             <file src="musl-1.1.16~20161215.tar.gz" subdir="sources"
                 sha256sum="158f0c5ee1359964e582732f32fb3ce9dec4869df21aa6226da16f801587732d"/>
+            <file src="patches.01.tar.gz" subdir="patches"
+                sha256sum="7cf0f5601fe4b557386c7ddde19aaad6613d384e9533e36ab2b414b559967cda"/>
         </sources>
+
+        <patches>
+            <patchset subdir="sources">
+                <file src="patches/musl-cdefs.patch"/>
+            </patchset>
+        </patches>
 
         <!-- build rules -->
         <xi:include href="rules.xml"/>
