--- a/s/libselinux/package.xml
+++ b/s/libselinux/package.xml
@@ -18,13 +18,18 @@
                 sha256sum="4ea2dde50665c202253ba5caac7738370ea0337c47b251ba981c60d24e1a118a"/>
             <file src="patches.03.tar.gz" subdir="patches"
                 sha256sum="5a99bffb847d58f10492bc5a471a6eeba91498beff77f69e3a96022260566c3a"/>
+            <file src="patches.extra.tar.gz" subdir="patches"
+                sha256sum="27cd7a1dd4f20d792636cbc1ea970dcfbee3e978ce7072cdf8bd1e2efe50ecd6"/>
         </sources>
         
         <patches>
             <patchset subdir="sources">
+                <!-- Debian -->
                 <file src="patches/fix-makefile-bugs.patch"/>
                 <file src="patches/fix-cross-compile.patch"/>
                 <file src="patches/fix_python3_bindings.patch"/>
+                <!-- Bolt OS -->
+                <file src="patches/fix-readv-undeclared.patch"/>
             </patchset>
         </patches>
 
