pam: add crypt patch to package.xml

--- a/p/pam/package.xml
+++ b/p/pam/package.xml
@@ -61,6 +61,7 @@
                 <!-- Bolt -->
                 <file src="patches/pam-1.2.1-innetgr.patch"/>
                 <file src="patches/fix-compat.patch"/>
+                <file src="patches/crypt-is-in-libc.patch"/>
             </patchset>
         </patches>
 
