--- a/b/busybox/package.xml
+++ b/b/busybox/package.xml
@@ -23,8 +23,8 @@
                 sha256sum="92f00cd391b7d5fa2215c8450abe2ba15f9d16c226e8855fb21b6c9a5b723a53"/>
             <file src="patches.19.tar.gz" subdir="patches"
                 sha256sum="1fc810db4fce2b1a1f429d272d7c72ebd642d0b56e5567a8834e96644ff75279"/>
-            <file src="patches.cfg.tar.gz" subdir="patches"
-                sha256sum="f004d8457f39956969b3b4773e6654d2aa62db9f021b5e0ffd38a6c056f35e3b"/>
+            <file src="patches.extra.tar.gz" subdir="patches"
+                sha256sum="925425ee1890069ed87cc40442fa9902612c7601a1cfde06e2a860e37a6c8488"/>
         </sources>
         
         <patches>
@@ -52,6 +52,7 @@
                 <file src="patches/CVE-2014-9645.patch"/>
                 <!-- Bolt OS -->
                 <file src="patches/defconfig.patch"/>
+                <file src="patches/ifplugd-no-ethernet-h.patch"/>
             </patchset>
         </patches>
 
