--- a/n/ncurses/package.xml
+++ b/n/ncurses/package.xml
@@ -6,13 +6,10 @@
 
     <source name="ncurses" architecture-independent="false">
         <description>
-            <summary>shared low-level terminfo library for terminal handling</summary>
+            <summary>libraries for terminal handling</summary>
             <p>
             The ncurses library routines are a terminal-independent method of
             updating character screens with reasonable optimization.
-            </p>
-            <p>
-            This package contains the shared low-level terminfo library.
             </p>
         </description>
 
