python2.7 remove attribute with unescaped '<'

--- a/p/python2.7/package.xml
+++ b/p/python2.7/package.xml
@@ -98,7 +98,7 @@
             <package name="net-tools"/>
             <package name="bzip2"/>
             <package name="time"/>
-            <package name="libdb-dev" version="<< 1:6.0"/>
+            <package name="libdb-dev"/>
             <package name="libgdbm-dev"/>
             <package name="python:any"/>
             <package name="help2man"/>
