--- a/a/attr/package.xml
+++ b/a/attr/package.xml
@@ -20,13 +20,18 @@
                 sha256sum="6c1208035757f5ce9b516402dd45b8299a53ae4d69ad2c352116f9cb8d7bc274"/>
             <file src="patches.02.tar.gz" subdir="patches"
                 sha256sum="134b69c97511752c6f18f796afb5b206c1c3841ffea3d3c04510e36ef5115000"/>
+            <file src="patches.extra.tar.gz" subdir="patches"
+                sha256sum="b74d2199a50c6a852e43a8e05e36ecd36317e72672761e8f88c11f066fd6c6fa"/>
         </sources>
         
         <patches>
             <patchset subdir="sources">
+                <!-- Debian -->
                 <file src="patches/01-configure.in.patch"/>
                 <file src="patches/02-687531-fix-missing-ldflags.patch"/>
                 <file src="patches/12-643587-attr-autoconf-version-check.patch"/>
+                <!-- Bolt OS -->
+                <file src="patches/fix-cdecls-throw-in-xattr-h.patch"/>
             </patchset>
         </patches>
 
